<resources>
	<string name="app_name">PIRI Life-likes</string>
	<string name="clear">Clear</string>
	<string name="pause">pause</string>
	<string name="start">start</string>
	<string name="setting">setting</string>
	<string name="brush_size_paused">Brush size when paused</string>
	<string name="cell_size">Cell size</string>
	<string name="lifecycle">Lifecycle length(a thousandth second)</string>
	<string name="neighborBorn">The numbers of neighbors that resurrect a cell</string>
	<string name="neighborSurvive">The numbers of neighbors that let a cell survive</string>
	<string name="surviveNumber">Surviving numbers</string>
	<string name="birthNumber">Birthing numbers</string>
	<string name="speedGuide">Inversely proportional to simulation speed</string>
	<string name="rules">Rules</string>
	<string name="others">Others</string>
	<string name="cellColor">Cell color</string>
	<string name="backgroundColor">Background color</string>
	<string name="lineColor">Line color</string>
	<string name="credits">Credits</string>
	<string name="save">Save</string>
	<string name="load">Load</string>
	<string name="eraserToggleWriting">Brush</string>
	<string name="eraserToggleErasing">Eraser</string>
	<string name="couldntWriteFile">Couldn\'t write to file</string>
	<string name="filename">Filename</string>
	<string name="couldntReadFile">Couldn\'t read the file</string>
	<string name="saveRationale">The permission is needed to save files.</string>
	<string name="loadRationale">The permission is needed to read files.</string>
	<string name="showLines">Show lines</string>
</resources>
