<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:custom="http://schemas.android.com/apk/res-auto">
	<PreferenceCategory
		android:title="@string/rules">
		<MultiSelectListPreference
			android:key="birthNumbers"
			android:title="@string/birthNumber"
			android:summary="@string/neighborBorn"
			android:entries="@array/neighborNumbers"
			android:entryValues="@array/neighborValue"
			android:defaultValue="@array/birthDefault"/>
		<MultiSelectListPreference
			android:key="surviveNumbers"
			android:title="@string/surviveNumber"
			android:summary="@string/neighborSurvive"
			android:entries="@array/neighborNumbers"
			android:entryValues="@array/neighborValue"
			android:defaultValue="@array/surviveDefault"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/others">
		<com.thisispiri.preferences.IntegerPreference
			android:key="cellSize"
			custom:imposeScreenLimit="true"
			android:defaultValue="16"
			android:inputType="numberSigned"
			android:digits="0123456789"
			android:title="@string/cell_size"/>
		<com.thisispiri.preferences.IntegerPreference
			android:key="pauseBrushSize"
			custom:imposeScreenLimit="true"
			android:defaultValue="1"
			android:inputType="numberSigned"
			android:digits="0123456789"
			android:title="@string/brush_size_paused"/>
		<com.thisispiri.preferences.IntegerPreference
			android:key="lifecycle"
			android:defaultValue="10"
			android:inputType="numberSigned"
			android:digits="0123456789"
			android:title="@string/lifecycle"
			android:summary="@string/speedGuide"/>
		<com.thisispiri.preferences.ArgbPreference
			android:key="cellColor"
			android:defaultValue="@integer/black"
			android:title="@string/cellColor"/>
		<com.thisispiri.preferences.ArgbPreference
			android:key="backgroundColor"
			android:defaultValue="@integer/white"
			android:title="@string/backgroundColor"/>
		<com.thisispiri.preferences.CreditsPreference
			android:title="@string/credits"
			custom:text="The AOSP, for AndroidX in Apache License 2.0\nYou can obtain a copy of Apache License 2.0 at https://www.apache.org/licenses/LICENSE-2.0"/>
	</PreferenceCategory>
</PreferenceScreen>