<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/activity_main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="com.thisispiri.lifelike.MainActivity"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		tools:ignore="ButtonStyle">
		<Button
			android:id="@+id/start"
			android:text="@string/start"
			android:layout_weight="1"
			android:layout_width="0dp"
			android:layout_height="match_parent"/>
		<Button
			android:id="@+id/setting"
			android:text="@string/setting"
			android:layout_weight="1"
			android:layout_width="0dp"
			android:layout_height="match_parent"/>
		<Button
			android:id="@+id/clear"
			android:text="@string/clear"
			android:layout_weight="1"
			android:layout_width="0dp"
			android:layout_height="match_parent"/>
	</LinearLayout>

	<com.thisispiri.lifelike.LifeGrid
		android:layout_height="0dp"
		android:layout_width="match_parent"
		android:id="@+id/view"
		android:layout_weight="9" />
</LinearLayout>
